# haskell-sandwich

./: .gitignore  ChangeLog.md  sandwich.cabal  stack.yaml
src/: Sandwich.hs
